
[package]
name = "gondola"
version = "0.1.0"
authors = ["Morten H. Solvang <morten.hauke.solvang@gmail.com>"]

[features]
default = []
serialize = ["serde"]

[dependencies]
gondola_derive = { path = "gondola_derive" }
cable_math = { path = "cable_math" }

glutin = "0.9"
winit = "0.7" # Needed to access some specific window stuff
gl = "*"
libc = "*"

rusttype = "0.2"
bitflags = "0.9"
# Only needed if we want custom serialization derives for color types
serde = { version = "1.0", optional = true }
png = { version = "0.9", features = [] }
