
[package]
name = "cable_math"
version = "0.1.0"
authors = ["Morten H. Solvang <morten.hauke.solvang@gmail.com>"]

[features]
default = []
serialize = ["serde"]

[dependencies]
num = "0.1.*"
# Only needed if we want custom serialization derives for vector types
serde = { version = "1.0", optional = true }
